--- a/furniture_Sales_Management/src/view/GenerateDocument.form
+++ b/furniture_Sales_Management/src/view/GenerateDocument.form
@@ -208,6 +208,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Generate Report"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ReportBtnActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
