--- a/furniture_Sales_Management/src/view/MainPage.form
+++ b/furniture_Sales_Management/src/view/MainPage.form
@@ -73,9 +73,7 @@
                           <Component id="lblTitle" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
                           <Component id="welcometxt" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace pref="369" max="32767" attributes="0"/>
-                          <Component id="rolelbl" min="-2" pref="168" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="120" max="-2" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="ProfileBtn" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -89,7 +87,7 @@
                               <Component id="LogoutBtn" alignment="0" max="32767" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="Tabs" max="32767" attributes="0"/>
+                          <Component id="Tabs" pref="967" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -102,7 +100,6 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblTitle" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="welcometxt" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="rolelbl" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                       <Component id="ProfileBtn" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="0" attributes="0">
@@ -128,14 +125,6 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="rolelbl">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Century Gothic" size="14" style="0"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="none detected"/>
-          </Properties>
-        </Component>
         <Component class="javax.swing.JLabel" name="welcometxt">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
