--- a/furniture_Sales_Management/src/view/GeneratePDF.form
+++ b/furniture_Sales_Management/src/view/GeneratePDF.form
@@ -113,7 +113,7 @@
                           <Component id="DateLbl" min="-2" max="-2" attributes="0"/>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Component id="DateTxt" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="23" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
